Added pure SMILES loading as well

--- a/CADD/General.ipynb
+++ b/CADD/General.ipynb
@@ -26,7 +26,7 @@
     "        self.name=attach_names\n",
     "        self.ended=False\n",
     "    \n",
-    "    def getNext(self,num=1):\n",
+    "    def getNext(self,num=1,as_smiles=False):\n",
     "        ret=[]\n",
     "        if self.name:\n",
     "            names=[]\n",
@@ -41,12 +41,12 @@
     "            mol=ln[0]\n",
     "            if self.name: myname=ln[1].strip()\n",
     "            else: myname = None\n",
-    "            mol=Chem.MolFromSmiles(mol)\n",
-    "            if self.autoskip and (mol is None):\n",
-    "                self.counter+=1\n",
-    "                skip+=1\n",
-    "                continue\n",
-    "                \n",
+    "            if not as_smiles:\n",
+    "                mol=Chem.MolFromSmiles(mol)\n",
+    "                if self.autoskip and (mol is None):\n",
+    "                    self.counter+=1\n",
+    "                    skip+=1\n",
+    "                    continue\n",
     "            ret.append(mol)\n",
     "            if self.name: names.append(myname)\n",
     "            \n",
@@ -57,7 +57,7 @@
     "        if self.name: return ret,names\n",
     "        else: return ret\n",
     "    \n",
-    "    def drain(self): return self.getNext(-1)\n",
+    "    def drain(self,as_smiles=False): return self.getNext(-1,as_smiles)\n",
     "    def __del__(self): self.file.close()\n",
     "    \n",
     "    def __help__(self): print(\"This is help\")"
