--- a/CADD/General.ipynb
+++ b/CADD/General.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9c90a485",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f7f514ec",
    "metadata": {},
    "outputs": [],
@@ -37,6 +37,7 @@
     "        \n",
     "        for ln in self.file:\n",
     "            ln=ln.strip().split()\n",
+    "            if not len(ln): continue\n",
     "            \n",
     "            mol=ln[0]\n",
     "            if self.name: myname=ln[1].strip()\n",
@@ -61,6 +62,27 @@
     "    def __del__(self): self.file.close()\n",
     "    \n",
     "    def __help__(self): print(\"This is help\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "829e9372",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RDKitMoleculeWrapper:\n",
+    "    def __init__(self,mol):\n",
+    "        self.mol = mol\n",
+    "        if type(self.mol)!=Chem.rdchem.Mol: self.mol=Chem.MolFromSmiles(self.mol)\n",
+    "    \n",
+    "    def __call__(self): return self.mol\n",
+    "    def get(self): return self.mol\n",
+    "    \n",
+    "    def getSize(self,includeHs=False):\n",
+    "        if includeHs: tempmol=Chem.AddHs(self.mol)\n",
+    "        else: tempmol=self.mol\n",
+    "        return (tempmol.GetNumHeavyAtoms() if (not includeHs) else len(tempmol.GetAtoms()))"
    ]
   },
   {
