Empty Lines Problem Fixed

--- a/CADD/General.ipynb
+++ b/CADD/General.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9c90a485",
    "metadata": {},
    "outputs": [],
@@ -13,18 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f7f514ec",
    "metadata": {},
    "outputs": [],
    "source": [
     "class SequentialSMILESLoader:\n",
-    "    def __init__(self,smifilename,skip_failures=True,attach_names=False):\n",
+    "    def __init__(self,smifilename,skip_failures=True,attach_names=False,count_max=True):\n",
     "        self.file=open(smifilename,\"r\")\n",
     "        self.counter=0\n",
     "        self.autoskip=skip_failures\n",
     "        self.name=attach_names\n",
     "        self.ended=False\n",
+    "        if count_max:\n",
+    "            self.linecount=len(self.file.readlines())\n",
+    "            self.file=open(smifilename,\"r\")\n",
+    "        else: self.linecount= None\n",
     "    \n",
     "    def getNext(self,num=1,as_smiles=False):\n",
     "        ret=[]\n",
@@ -32,12 +36,16 @@
     "            names=[]\n",
     "        K=self.counter\n",
     "        skip=0\n",
+    "        empty=0\n",
     "        \n",
     "        if self.ended: return None\n",
     "        \n",
     "        for ln in self.file:\n",
     "            ln=ln.strip().split()\n",
-    "            if not len(ln): continue\n",
+    "            if not len(ln):\n",
+    "                self.counter+=1\n",
+    "                empty+=1\n",
+    "                continue\n",
     "            \n",
     "            mol=ln[0]\n",
     "            if self.name: myname=ln[1].strip()\n",
@@ -52,7 +60,7 @@
     "            if self.name: names.append(myname)\n",
     "            \n",
     "            self.counter+=1\n",
-    "            if self.counter-K-skip==num: break\n",
+    "            if self.counter-K-skip-empty==num: break\n",
     "        else: self.ended=True\n",
     "        \n",
     "        if self.name: return ret,names\n",
@@ -66,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "829e9372",
    "metadata": {},
    "outputs": [],
@@ -112,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
