Added SmilesLoader flexibility to move file pointer. Also added Self-Similarity Calculation Criteria

--- a/CADD/General.ipynb
+++ b/CADD/General.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9c90a485",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f7f514ec",
    "metadata": {},
    "outputs": [],
    "source": [
     "class SequentialSMILESLoader:\n",
-    "    def __init__(self,smifilename,skip_failures=True,attach_names=False,count_max=True):\n",
+    "    def __init__(self,smifilename,skip_failures=True,attach_names=False,count_max=True,default_batch=1):\n",
+    "        self.filename=smifilename\n",
     "        self.file=open(smifilename,\"r\")\n",
     "        self.counter=0\n",
     "        self.autoskip=skip_failures\n",
@@ -29,8 +30,24 @@
     "            self.linecount=len(self.file.readlines())\n",
     "            self.file=open(smifilename,\"r\")\n",
     "        else: self.linecount= None\n",
+    "        self.default_batch=default_batch\n",
     "    \n",
-    "    def getNext(self,num=1,as_smiles=False):\n",
+    "    def getFilename(self): return self.filename\n",
+    "    def restartSequence(self,keep_location=False):\n",
+    "        ret=SequentialSMILESLoader(self.filename,self.autoskip,self.name,self.linecount is None,self.default_batch)\n",
+    "        if keep_location: ret.skipNext(self.counter)\n",
+    "        return ret\n",
+    "    \n",
+    "    def skipNext(self,num=0):\n",
+    "        K=0\n",
+    "        for ln in self.file:\n",
+    "            self.counter+=1\n",
+    "            K+=1\n",
+    "            if K>=num: break\n",
+    "        else: self.ended=True\n",
+    "            \n",
+    "    def getNext(self,num=0,as_smiles=False):\n",
+    "        if num==0: num=self.default_batch\n",
     "        ret=[]\n",
     "        if self.name:\n",
     "            names=[]\n",
@@ -74,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "829e9372",
    "metadata": {},
    "outputs": [],
@@ -95,10 +112,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "627854a0",
+   "execution_count": 4,
+   "id": "a80a7921",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import copy\n",
+    "# Get a similarity score distribution\n",
+    "def getSimilarityDistribution(smilesloader,goal=max,post=None,default=0,fingerprint=Chem.RDKFingerprint,similarity=Chem.DataStructs.TanimotoSimilarity,precompute_fps=False,batch_mols=0):\n",
+    "    num_mol=smilesloader.linecount\n",
+    "    keep_count=False\n",
+    "    if num_mol is None:\n",
+    "        num_mol=0\n",
+    "        keep_count=True\n",
+    "    if type(goal)==str:\n",
+    "        if goal==\"max\":\n",
+    "            goal=max\n",
+    "            post=None #Post processing\n",
+    "        if goal==\"mean\":\n",
+    "            goal=lambda x,y:x+y\n",
+    "            post=lambda z: z/num_mol\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    if precompute_fps:\n",
+    "        mols=smilesloader.drain(as_smiles=False)\n",
+    "        if type(mols)==tuple and type(mols[0])==list: mols=mols[0]\n",
+    "        mols=[fingerprint(mol) for mol in mols]\n",
+    "        print(\"Fingerprints computed for\",len(mols),\"molecules\")\n",
+    "    \n",
+    "        ret=[default for _ in mols]\n",
+    "    \n",
+    "        for i in range(len(ret)):\n",
+    "            mol1=mols[i]\n",
+    "            #if not precompute_fps: mol1=fingerprint(mol1)\n",
+    "            for j,mol2 in enumerate(mols):\n",
+    "                if j==i : continue\n",
+    "                #if not precompute_fps: mol2=fingerprint(mol2)\n",
+    "                simsc=similarity(mol1,mol2)\n",
+    "                ret[i]=goal(ret[i],simsc)\n",
+    "    else:\n",
+    "        ret=[]\n",
+    "        mainloader=smilesloader.restartSequence(keep_location=True)\n",
+    "        thismols=mainloader.getNext(batch_mols,as_smiles=False)\n",
+    "        while thismols is not None:\n",
+    "            if type(thismols)==tuple and type(thismols[0])==list: thismols=thismols[0]\n",
+    "            thisfps=[fingerprint(mol) for mol in thismols]\n",
+    "            #Do stuff here\n",
+    "            nxt=[default]*len(thismols)\n",
+    "            shf=len(ret)\n",
+    "            startloader=smilesloader.restartSequence(keep_location=True)\n",
+    "            allmols=startloader.getNext(batch_mols,as_smiles=False)\n",
+    "            blockind=0\n",
+    "            while allmols is not None:\n",
+    "                if type(allmols)==tuple and type(allmols[0])==list: allmols=allmols[0]\n",
+    "                allfps=[fingerprint(mol) for mol in allmols]\n",
+    "                for i,tmol in enumerate(thisfps):\n",
+    "                    for j,cfp in enumerate(allfps):\n",
+    "                        if j+blockind==i+shf: continue\n",
+    "                        nxt[i]=goal(nxt[i],similarity(tmol,cfp))\n",
+    "                blockind+=len(allmols)\n",
+    "                allmols=startloader.getNext(batch_mols,as_smiles=False)\n",
+    "            ret+=nxt\n",
+    "            thismols=mainloader.getNext(batch_mols,as_smiles=False)\n",
+    "    \n",
+    "    if post is not None: ret=[post(v) for v in ret]\n",
+    "    return np.array(ret)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "884cbf57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Usage for getSimilarityDistribution()\n",
+    "'''\n",
+    "import time\n",
+    "\n",
+    "starttime=time.time()\n",
+    "file=\"/home/venkata/CADD/denovo_benchmarking/analysis/test.smi\"\n",
+    "sload=SequentialSMILESLoader(file,default_batch=1024)\n",
+    "sload.skipNext(1024) #Skipping Part of the Iterator is Allowed\n",
+    "sdist=getSimilarityDistribution(sload,goal=\"max\",precompute_fps=True) #You can use precompute_fps=False as well to save RAM\n",
+    "endtime=time.time()\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.hist(sdist)\n",
+    "print(endtime-starttime,len(sdist))\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "627854a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded Library 'General (RDKit)'\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Loaded Library 'General (RDKit)'\")"
    ]
@@ -120,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
