Final Touches - CADD/General

--- a/CADD/General.ipynb
+++ b/CADD/General.ipynb
@@ -161,6 +161,7 @@
     "            #Do stuff here\n",
     "            nxt=[default]*len(thismols)\n",
     "            shf=len(ret)\n",
+    "            print(shf,\"molecules processed\")\n",
     "            startloader=smilesloader.restartSequence(keep_location=True)\n",
     "            allmols=startloader.getNext(batch_mols,as_smiles=False)\n",
     "            blockind=0\n",
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "884cbf57",
    "metadata": {},
    "outputs": [],
@@ -193,7 +194,7 @@
     "\n",
     "starttime=time.time()\n",
     "file=\"/home/venkata/CADD/denovo_benchmarking/analysis/test.smi\"\n",
-    "sload=SequentialSMILESLoader(file,default_batch=1024)\n",
+    "sload=SequentialSMILESLoader(file,default_batch=256)\n",
     "sload.skipNext(1024) #Skipping Part of the Iterator is Allowed\n",
     "sdist=getSimilarityDistribution(sload,goal=\"max\",precompute_fps=True) #You can use precompute_fps=False as well to save RAM\n",
     "endtime=time.time()\n",
@@ -201,7 +202,8 @@
     "import matplotlib.pyplot as plt\n",
     "plt.hist(sdist)\n",
     "print(endtime-starttime,len(sdist))\n",
-    "'''"
+    "'''\n",
+    "pass"
    ]
   },
   {
