--- a/CADD/General.ipynb
+++ b/CADD/General.ipynb
@@ -145,6 +145,7 @@
     "    \n",
     "        for i in range(len(ret)):\n",
     "            mol1=mols[i]\n",
+    "            if (i+1)%2500==0: print(i+1,\"molecules completed of\",len(ret))\n",
     "            #if not precompute_fps: mol1=fingerprint(mol1)\n",
     "            for j,mol2 in enumerate(mols):\n",
     "                if j==i : continue\n",
@@ -241,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
