Recurrent Model now part of AtomRNN Module

--- a/CADD/AtomRNN_Module.ipynb
+++ b/CADD/AtomRNN_Module.ipynb
@@ -30,7 +30,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "%run /home/venkata/python/python_libraries/CADD/PDBReader.ipynb\n",
+    "try:\n",
+    "    if GLOBAL_LOADED_PDBREADER: pass\n",
+    "except NameError:\n",
+    "    %run /home/venkata/python/python_libraries/CADD/PDBReader.ipynb\n",
     "\n",
     "import sys,os\n",
     "import time\n",
@@ -152,6 +155,224 @@
     "def loadPDBsForTraining(filenames,N,S,shuffle=True,skipHs=False,keys=dict()): #Quick shortcut\n",
     "    rawdata=readPDBFiles(filenames,N,S,skipHs=skipHs)\n",
     "    return rawdataToDataset(rawdata,shuffle=shuffle,keys=keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be8ff644",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EMBED=64\n",
+    "RNN_UNITS=512\n",
+    "DENSE_UNITS=256\n",
+    "from torch import nn\n",
+    "import torch\n",
+    "\n",
+    "class RecurrentTemplate(nn.Module):\n",
+    "    def __init__(self,vocab,seqlen):\n",
+    "        super(RecurrentTemplate,self).__init__()\n",
+    "        self.maxlen=seqlen\n",
+    "        self.vocabulary=vocab\n",
+    "        self.vocabulary[\"\"]=0\n",
+    "        self.constructVocabularyInverse()\n",
+    "        self.vocab_size=len(self.vocabulary)\n",
+    "        self.embedlayer=torch.nn.Embedding(num_embeddings=len(self.vocabulary)+2,embedding_dim=EMBED)\n",
+    "        \n",
+    "    def constructVocabularyInverse(self):\n",
+    "        self.vocabulary_inverse=dict()\n",
+    "        for k in self.vocabulary.keys():\n",
+    "            self.vocabulary_inverse[self.vocabulary[k]]=k\n",
+    "    \n",
+    "    def encode(self,lst): #Batched (B,?)\n",
+    "        return encodeAll(lst,self.vocabulary)[0]\n",
+    "    def decode(self,tens): #Batched\n",
+    "        ret=[]\n",
+    "        for vec in tens:\n",
+    "            nv=[]\n",
+    "            for r in vec:\n",
+    "                nv.append(self.vocabulary_inverse[int(r)] if r!=0 else MASK)\n",
+    "            ret.append(nv)\n",
+    "        return ret\n",
+    "        \n",
+    "\n",
+    "class RecurrentLearnerModel(RecurrentTemplate):\n",
+    "    def __init__(self,vocab,seqlen,grulayers=2):\n",
+    "        super(RecurrentLearnerModel,self).__init__(vocab,seqlen)\n",
+    "        self.gru=torch.nn.LSTM(EMBED,RNN_UNITS,num_layers=grulayers,batch_first=True)\n",
+    "        self.linear=torch.nn.Linear(RNN_UNITS,DENSE_UNITS)\n",
+    "        self.finallayer=torch.nn.Linear(DENSE_UNITS,self.vocab_size+1) #len(vocab) + MASK*1\n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "        \n",
+    "    def forward(self,x,hidden=None):\n",
+    "        #x has shape (B,L)\n",
+    "        x=self.embedlayer(x) #Return shape (B,L,E) - where E is embedding dim\n",
+    "        outs,hidden=self.gru(x,hidden)\n",
+    "        outs=self.linear(outs)\n",
+    "        outs=self.finallayer(outs)\n",
+    "        return F.softmax(outs,dim=-1),outs,hidden #Outs needed for CrossEntropyLoss\n",
+    "    \n",
+    "    def predict(self,x,hidden=None,limit_k=-1):\n",
+    "        #x has shape (B,L)\n",
+    "        #Output has shape (B,1) - with one prediction at each place\n",
+    "        #limit_k limits outputs to top 'k' most probable results\n",
+    "        preds,_,hidden=self.forward(x,hidden)\n",
+    "        if limit_k<=0: limit_k = preds.shape[-1]\n",
+    "        preds,inds=preds.topk(limit_k)\n",
+    "        #print(preds.shape,inds.shape,torch.sum(preds,dim=-1)[:,:,np.newaxis].shape,preds[0].multinomial(1,replacement=False).shape)\n",
+    "        preds=preds/torch.sum(preds,dim=-1)[:,:,np.newaxis]\n",
+    "        predret=[]\n",
+    "        for i,pv in enumerate(preds):\n",
+    "            selind=torch.squeeze(pv.multinomial(1,replacement=False),dim=-1) # (seqlen) - list of seqlen indices chosen\n",
+    "            truinds=torch.stack([v[selind[j]] for j,v in enumerate(inds[i])])\n",
+    "            predret.append(truinds)\n",
+    "        predmul=torch.stack(predret)\n",
+    "        #predmul=torch.stack([torch.squeeze(inds[i,]) for i,pv in enumerate(preds)])\n",
+    "        return predmul,hidden\n",
+    "    \n",
+    "    def generate(self,num,maxlen,limit_k=-1,use_hidden=None):\n",
+    "        hidden=use_hidden\n",
+    "        base_start=[['^']]*num\n",
+    "        inseq=self.encode(base_start)\n",
+    "        inseq=torch.stack(inseq)\n",
+    "        curseq=inseq\n",
+    "        ended=torch.zeros(len(base_start),dtype=torch.bool).to(DEVICE)\n",
+    "        with torch.no_grad():\n",
+    "            while curseq.shape[1]<maxlen and not torch.all(ended):\n",
+    "                res,hidden=self.predict(inseq,hidden,limit_k)\n",
+    "                vals=torch.squeeze(res,dim=-1)==MASK\n",
+    "                ended=ended | vals\n",
+    "                curseq=torch.cat((curseq,res),dim=1)\n",
+    "        return self.decode(curseq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39bf7e4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE=32\n",
+    "import abc\n",
+    "class GenericModelTrainer(metaclass=abc.ABCMeta):\n",
+    "    def __init__(self,model,optimizer_type,learnrate,lossfn):\n",
+    "        self.model=model\n",
+    "        self.optimizer = optimizer_type(self.model.parameters(),lr=learnrate)\n",
+    "        self.lossfn=lossfn\n",
+    "    \n",
+    "    def useModel(self,inputs): return self.model(inputs)\n",
+    "    def evaluateModel(self,inputs,labels,batch_size=BATCH_SIZE,metrics=[],print_out=False):\n",
+    "        metric_profile=dict()\n",
+    "        for met in metrics: metric_profile[str(met)] = []\n",
+    "        with torch.no_grad():\n",
+    "            net_loss=[]\n",
+    "            for idx in range(len(inputs)//BATCH_SIZE):\n",
+    "                self.optimizer.zero_grad()\n",
+    "                inpdata=inputs[idx*BATCH_SIZE:(idx+1)*BATCH_SIZE]\n",
+    "                outdata=labels[idx*BATCH_SIZE:(idx+1)*BATCH_SIZE]\n",
+    "\n",
+    "                sample = self.useModel(inpdata)\n",
+    "                loss=self.lossfn(sample,outdata)\n",
+    "                for met in metrics:\n",
+    "                    metx=met(sample,outdata)\n",
+    "                    metric_profile[str(met)].append(metx.item())\n",
+    "                net_loss.append(loss.item())\n",
+    "            if len(metrics):\n",
+    "                if print_out: print(\"Metrics:\",end=\" \")\n",
+    "                for met in metrics:\n",
+    "                    meanmet=np.mean(metric_profile[str(met)])\n",
+    "                    metric_profile[str(met)]=meanmet\n",
+    "                    if print_out: print(str(met),meanmet,end=\", \")\n",
+    "                if print_out: print()\n",
+    "        if len(metrics): return np.mean(net_loss)\n",
+    "        else: return np.mean(net_loss),metric_profile\n",
+    "                \n",
+    "        \n",
+    "    \n",
+    "    def trainModel(self,inputs,labels,epochs,batch_size=BATCH_SIZE,metrics=[],save=False,save_every=5,save_path=\"model_training.\"):\n",
+    "        loss_profile=[]\n",
+    "        loss_metrics=dict()\n",
+    "        for met in metrics: loss_metrics[str(met)] = []\n",
+    "        EPOCHS=epochs\n",
+    "        SAVE=5\n",
+    "        SAVE_PATH = save_path # \"saved_models/Seqlearner_Amac_PT_weightsonly\"\n",
+    "        PROGRESS_STEP = (len(inputs)//BATCH_SIZE)//72\n",
+    "        for ep in range(EPOCHS):\n",
+    "            net_loss=[]\n",
+    "            timestart=time.time()\n",
+    "            for met in metrics: loss_metrics[str(met)].append([])\n",
+    "            print(\"Epoch\",ep+1,\"[\",end=\"\")\n",
+    "            for idx in range(len(inputs)//BATCH_SIZE):\n",
+    "                self.optimizer.zero_grad()\n",
+    "                inpdata=inputs[idx*BATCH_SIZE:(idx+1)*BATCH_SIZE]\n",
+    "                outdata=labels[idx*BATCH_SIZE:(idx+1)*BATCH_SIZE]\n",
+    "                \n",
+    "                sample = self.useModel(inpdata)\n",
+    "                loss=self.lossfn(sample,outdata)\n",
+    "                loss.backward()\n",
+    "                self.optimizer.step()\n",
+    "                \n",
+    "                for met in metrics:\n",
+    "                    metx=met(sample,outdata)\n",
+    "                    loss_metrics[str(met)][-1].append(metx.item())\n",
+    "                \n",
+    "                net_loss.append(loss.item())\n",
+    "                if idx%PROGRESS_STEP==0: print(\"=\",end=\"\",flush=True)\n",
+    "            timeend=time.time()\n",
+    "            print(\"]\",flush=True)\n",
+    "            loss_profile.append(np.mean(net_loss))\n",
+    "            print(\"Epoch\",ep+1,\"with loss:\",loss_profile[-1],\"took time:\",timeend-timestart)\n",
+    "            if len(metrics):\n",
+    "                print(\"Metrics:\",end=\" \")\n",
+    "                for met in metrics:\n",
+    "                    meanmet=np.mean(loss_metrics[str(met)][-1])\n",
+    "                    loss_metrics[str(met)][-1]=meanmet\n",
+    "                    print(str(met),meanmet,end=\", \")\n",
+    "                print()\n",
+    "            if save and ep%SAVE==0: torch.save(mymodel,SAVE_PATH) #torch.save(mymodel.state_dict(),SAVE_PATH)\n",
+    "        if save: torch.save(mymodel,SAVE_PATH)\n",
+    "        print(\"Completed\")\n",
+    "        if len(metrics): return loss_profile,loss_metrics\n",
+    "        else: return loss_profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2025960d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RecurrentClassifier(RecurrentTemplate):\n",
+    "    def __init__(self,vocab,seqlen,classes,rnn_depth=1,deep_model=None):\n",
+    "        super(RecurrentClassifier,self).__init__(vocab,seqlen)\n",
+    "        self.num_classes=classes\n",
+    "        self.gru=torch.nn.LSTM(EMBED,RNN_UNITS,num_layers=rnn_depth,batch_first=True)\n",
+    "        if deep_model is None: deep_model = torch.nn.Linear(RNN_UNITS,2)\n",
+    "        self.linear = deep_model\n",
+    "        \n",
+    "    def forward(self,x,hidden=None):\n",
+    "        #x has shape (B,L)\n",
+    "        x=self.embedlayer(x) #Return shape (B,L,E) - where E is embedding dim\n",
+    "        outs,hidden=self.gru(x,hidden)\n",
+    "        outs=self.linear(outs)\n",
+    "        return F.softmax(outs,dim=-1),outs,hidden #Outs needed for CrossEntropyLoss "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b4e6978",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def manual_metric_accuracy(preds,trues):\n",
+    "    preds=torch.max(preds,dim=-1).indices.detach()\n",
+    "    return torch.sum(preds==trues)/len(preds)"
    ]
   }
  ],
