--- a/CADD/PDBReader.ipynb
+++ b/CADD/PDBReader.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "98964bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GLOBAL_LOADED_PDBREADER=True"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "565e4e3d",
    "metadata": {},
