Updated modules for streamlined loading (try 1)

--- a/CADD/AtomRNN_Module.ipynb
+++ b/CADD/AtomRNN_Module.ipynb
@@ -374,6 +374,63 @@
     "    preds=torch.max(preds,dim=-1).indices.detach()\n",
     "    return torch.sum(preds==trues)/len(preds)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84146cc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    if GLOBAL_LOADED_REINFORCE: pass\n",
+    "except NameError:\n",
+    "    %run /home/venkata/python/python_libraries/python/Reinforcement_Module.ipynb\n",
+    "'''\n",
+    "    Molecule Generation Game: The goal of this game is to generate molecules that satisfy certain criteria (such as net charge, size, etc.)\n",
+    "    The generator returns one of 'N' characters (decided apriori), and the generation ends when the model generates a '0'\n",
+    "'''\n",
+    "class MolGeneration(GenericDiscreteEnvironmentExtension,metaclass=abc.ABCMeta):\n",
+    "    def __init__(self,num_tokens,max_len,end_on=0,startWith=None,score_fn=constantScore,fail_fn=constantScore,score_kws=dict(),fail_kws=dict()):\n",
+    "        super(MolGeneration,self).__init__((1,),getBoundedObservables((1,),0,num_tokens+1),num_tokens+1,False)\n",
+    "        self.endtoken=end_on\n",
+    "        self.num_tokens = num_tokens\n",
+    "        self.maxlen = max_len\n",
+    "        self.scoring = score_fn\n",
+    "        self.failing = fail_fn\n",
+    "        self.fail_kws=fail_kws\n",
+    "        if startWith is not None: self.start=np.array(startWith,dtype=np.int64) #Need to implement\n",
+    "        else: self.start = np.zeros((1,),dtype=np.int64)\n",
+    "        \n",
+    "        self.state=self.start\n",
+    "        self.ended=False\n",
+    "        self.genseq=self.state\n",
+    "        \n",
+    "        #Correcting \"Action Space\" for batching\n",
+    "        #self.action_space = getBoundedObservables((1,),0,num_tokens+1)\n",
+    "        self.action_space = IntegerActions(0,num_tokens+1)\n",
+    "        \n",
+    "        self.score_kws=score_kws\n",
+    "    \n",
+    "    def isTerminalState(self): return self.genseq.shape[-1]>self.maxlen or self.ended\n",
+    "    def getObservation(self): return self.state[np.newaxis,:]\n",
+    "    \n",
+    "    def getReward(self):\n",
+    "        if self.isTerminalState(): return (self.scoring(self.genseq,**self.score_kws) if self.genseq.shape[-1]<=self.maxlen else torch.tensor(self.failing(self.genseq,**self.fail_kws)*(~self.ended),dtype=torch.float32))\n",
+    "        else: return 0.\n",
+    "    \n",
+    "    def reset(self):\n",
+    "        self.state=self.start\n",
+    "        self.genseq=self.state\n",
+    "        self.ended=False\n",
+    "        return self.getObservation()\n",
+    "    \n",
+    "    def resolveAction(self,act): #act is a set of batched actions (B,1) like (5,6,2,2,2,4,2,5,0 ... ) as a NUMPY array\n",
+    "        self.state=np.array([act])\n",
+    "        self.genseq=np.append(self.genseq,act)\n",
+    "        self.ended=(act==0)\n",
+    "        return self.isTerminalState()"
+   ]
   }
  ],
  "metadata": {
