--- a/python/Reinforcement_Module.ipynb
+++ b/python/Reinforcement_Module.ipynb
@@ -12,22 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "89e37dd5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'gym'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\u001b[38;5;241m,\u001b[39m\u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgym\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgym\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Env,spaces\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'gym'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random,time\n",
     "import numpy as np\n",
@@ -41,9 +29,6 @@
     "\n",
     "import torch\n",
     "\n",
-    "import cv2\n",
-    "DEFAULT_FONT = cv2.FONT_HERSHEY_COMPLEX_SMALL\n",
-    "\n",
     "from collections import namedtuple, deque\n",
     "from itertools import count\n",
     "\n",
@@ -56,12 +41,14 @@
     "    from IPython import display\n",
     "    #from google.colab.patches import cv2_imshow\n",
     "\n",
-    "DEVICE=torch.device(\"cuda\")"
+    "DEVICE=torch.device(\"cuda\")\n",
+    "BATCH_SIZE=32\n",
+    "STEP_LIM=100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6b8c1678",
    "metadata": {},
    "outputs": [],
@@ -108,12 +95,13 @@
     "    def render(self, mode = \"human\"):\n",
     "        assert mode in [\"human\", \"rgb_array\"], \"Invalid mode, must be either \\\"human\\\" or \\\"rgb_array\\\"\"\n",
     "        if mode == \"human\":\n",
-    "            cv2.imshow(\"Window\",self.canvas)\n",
-    "            cv2.waitKey(10)\n",
+    "            print(\"Human Mode is not supported!\")\n",
+    "            #cv2.imshow(\"Window\",self.canvas)\n",
+    "            #cv2.waitKey(10)\n",
     "\n",
     "        elif mode == \"rgb_array\":\n",
     "            return self.canvas\n",
-    "    def close(self): cv2.destroyAllWindows() #Overridable if needed\n",
+    "    def close(self): pass #cv2.destroyAllWindows() #Overridable if needed\n",
     "    \n",
     "    def checkIfActionAllowed(self,action): return self.action_space.contains(action)\n",
     "    \n",
@@ -205,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0b37b900",
    "metadata": {},
    "outputs": [],
@@ -424,6 +412,16 @@
     "                    sat=True\n",
     "                    break\n",
     "        return sat\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ae801e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Reinforcement Module Loaded\")"
    ]
   }
  ],
