--- a/CADD/AtomRNN_Module.ipynb
+++ b/CADD/AtomRNN_Module.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f8ad64a",
+   "id": "ca14aec3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fb9be6a4",
+   "id": "c5a95a38",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5757b7d4",
+   "id": "7aa2a0d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "688061b4",
+   "id": "ba56ff2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ca51867a",
+   "id": "71679c4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be8ff644",
+   "id": "d7b71cea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39bf7e4c",
+   "id": "1cbea6a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2025960d",
+   "id": "1d33dea9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,19 +363,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b4e6978",
+   "id": "0ff3ce62",
    "metadata": {},
    "outputs": [],
    "source": [
     "def manual_metric_accuracy(preds,trues):\n",
     "    preds=torch.max(preds,dim=-1).indices.detach()\n",
-    "    return torch.sum(preds==trues)/len(preds)"
+    "    return torch.sum(preds==trues)/len(preds)\n",
+    "def constantScore(inp): return 1."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84146cc4",
+   "id": "5b60ee84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
