Combine Parameters Feature

--- a/python/Reinforcement_Module.ipynb
+++ b/python/Reinforcement_Module.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ae45fd71",
+   "id": "ac46a9c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "89e37dd5",
+   "id": "26c28bc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6b8c1678",
+   "id": "ff0fbb05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0b37b900",
+   "id": "521d209f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,13 +411,27 @@
     "                    print(\"Target reward reached!\")\n",
     "                    sat=True\n",
     "                    break\n",
-    "        return sat\n"
+    "        return sat"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ae801e7",
+   "id": "3c863bd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combineParameters(parsets):\n",
+    "    ret=[]\n",
+    "    for paramlist in parsets:\n",
+    "        for pobj in paramlist: ret.append(pobj)\n",
+    "    return torch.nn.ParameterList(ret)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e60c2b4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +441,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
